--- a/fecske/pages/about.html
+++ b/fecske/pages/about.html
@@ -61,17 +61,27 @@
     </section>
     
     <section>
-        <div id=""></div>
+        <div id="">Ez egy üres hely, ide mit írjunk?</div>
     </section>
     <section>
-        <div id="jelenkezés">
+        <div id="jel">
             <h1>Szeretnél énekelni, de még nincs helyed?</h1>
             <p>Gyere el egy próbára, próbálj ki minket. :P Ha kedvet kaptál, jelentkezz bátran!</p>
             <p>Várunk a kórusunkban!</p>
         </div>
     </section>
-    <footer>
-        ?
-    </footer>
 </body>
+<footer>
+    <section class="footer">
+        <h1>Próbák</h1>
+        <p>Időpont: csütörtök/péntek 18:00-20:00</p>
+        <p>Helyszín: Közben Stúdió</p>
+    </section>
+    <section class="footer">
+        <h1>Szeretnél énekelni, de még nincs helyed?</h1>
+        <p>Gyere el egy próbára, próbálj ki minket. :P Ha kedvet kaptál, jelentkezz bátran!</p>
+        <p>Várunk a kórusunkban!</p>
+    </section>
+</footer>
+
 </html>
