--- a/fecske/pages/koncert.html
+++ b/fecske/pages/koncert.html
@@ -18,13 +18,6 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <div id="proba">
-            <h1>Próbák</h1>
-            <p>Időpont: csütörtök/péntek 18:00-20:00</p>
-            <p>Helyszín: Közben Stúdió</p>
-        </div>
-    </section>
     <section id="timeline">
         <div class="timeline">
             <div class="container left">
@@ -47,16 +40,16 @@
                 <div class="content">
                 <h2>2019. XII. ??</h2>
                 <p class="timeline-txt">Adventi flashmob</p>
-                <p class="timeline-txt">?</p>
+                <p class="timeline-txt">mit énekeltünk?</p>
                 <p class="timeline-txt">Kálvin tér</p>
-                </div>
+            </div>
             </div>
             <div class="container right">
                 <div class="content">
-                    <h2>2020. ?</h2>
-                    <p class="timeline-txt"></p>
-                    <p class="timeline-txt">mit?</p>
-                    <p class="timeline-txt">hol?</p>
+                    <h2>2020. 09. </h2>
+                    <p class="timeline-txt">Szerenád</p>
+                    <p class="timeline-txt">mit  énekeltünk?</p>
+                    <p class="timeline-txt">Budapest?</p>
                 </div>
             </div>
             <div class="container left">
@@ -69,17 +62,19 @@
             </div>
         </div> 
     </section>
-        <div id=""></div>
+    <div id=""></div>
     </section>
-    <section>
-        <div id="jelenkezés">
+    <footer>
+        <section class="footer">
+            <h1>Próbák</h1>
+            <p>Időpont: csütörtök/péntek 18:00-20:00</p>
+            <p>Helyszín: Közben Stúdió</p>
+        </section>
+        <section class="footer">
             <h1>Szeretnél énekelni, de még nincs helyed?</h1>
             <p>Gyere el egy próbára, próbálj ki minket. :P Ha kedvet kaptál, jelentkezz bátran!</p>
             <p>Várunk a kórusunkban!</p>
-        </div>
-    </section>
-    <footer>
-        ?
+        </section>
     </footer>
 </body>
 </html>
