--- a/fecske/pages/members.html
+++ b/fecske/pages/members.html
@@ -23,8 +23,7 @@
             <h1>Próbák</h1>
             <p>Időpont: csütörtök/péntek 18:00-20:00</p>
             <p>Helyszín: Közben Stúdió</p>
-            <p>Ráday utca 31/B (Kapucsengő/Buzz: 164 - KÖZBEN STÚDIÓ)
-                Budapest IX. kerülete</p>
+            <p>Ráday utca 31/B - Kapucsengő/Buzz: 164</p>
         </div>
     </section>
     <section id="jel">
