--- a/fecske/pages/repertoar.html
+++ b/fecske/pages/repertoar.html
@@ -19,27 +19,37 @@
         </nav>
     </header>
     <section>
-        <div id="proba">
-            <h1>Próbák</h1>
-            <p>Időpont: csütörtök/péntek 18:00-20:00</p>
-            <p>Helyszín: Közben Stúdió</p>
+        <div id="muvek">
+            <h1>Repertoár</h1>
+            <dl>
+                <dt>Adele Adkins& Paul Epworth</dt><dd>Skyfall</dd>
+                <dt>Bárdos Lajos</dt><dd>Dana-dana</dd>
+                <dt>Bárdos Lajos</dt><dd>Hét kurta kórus</dd>
+                <dt>Bárdos Lajos</dt><dd>Tiszai dallamok</dd>
+                <dt>Bartók Béla</dt><dd>Bolyongás</dd>
+                <dt>Johannes Brahms</dt><dd>Erlaube mir</dd>
+
+
+            </dl>    
         </div>
     </section>
     <section>
-        <div id=""></div>
+        <div id="kari"></div>
+        <h1>Karácsony</h1>
+        <dl>
+            <dt>W. J. Kirkpatrick</dt><dd>Csak jászolágy várta</dd>
+            <dt>Gerzsenyi Sándor (sz)</dt><dd>Csillagfényes csöndes éjjel</dd>
+            <dt>Ismeretlen</dt><dd>O Tannenbaum</dd>
+            <dt>???</dt><dd>Angels we have heard</dd>
+        </dl>
     </section>
-    <section>
-        <div id=""></div>
-    </section>
-    <section>
-        <div id="jelenkezés">
-            <h1>Szeretnél énekelni, de még nincs helyed?</h1>
-            <p>Gyere el egy próbára, próbálj ki minket. :P Ha kedvet kaptál, jelentkezz bátran!</p>
-            <p>Várunk a kórusunkban!</p>
-        </div>
-    </section>
-    <footer>
-        ?
-    </footer>
 </body>
+<footer>
+    <h1>Próbák</h1>
+        <p>Időpont: csütörtök/péntek 18:00-20:00</p>
+        <p>Helyszín: Közben Stúdió</p>
+    <h1>Szeretnél énekelni, de még nincs helyed?</h1>
+        <p>Gyere el egy próbára, próbálj ki minket. :P Ha kedvet kaptál, jelentkezz bátran!</p>
+        <p>Várunk a kórusunkban!</p>
+</footer>
 </html>
