--- a/fecske/index.html
+++ b/fecske/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <header>
-        <div id="home"><a href="/fecske/index.html">Fecske kamarakórus</a></div>
+        <div id="home"><a href="/fecske/index.html">fecske kamarakórus</a></div>
         <nav>
             <ul>
                 <li><a href="/fecske/pages/about.html">Bemutatkozás</a></li>
                 <li><a href="/fecske/pages/koncert.html">Koncertek</a></li>
                 <li><a href="/fecske/pages/members.html">Kórustagok</a></li>
-                <li><a href="/fecske/pages/repertoar.html">Repertoar</a></li>
+                <li><a href="/fecske/pages/repertoar.html">Repertoár</a></li>
             </ul>
         </nav>
     </header>
     <section id="parent">
-        <div class="box-intro" id="igen">fecske kamarakórus
+        <div class="box-intro" id="igen" >fecske kamarakórus
         </div>
     </section>
     <section>
