--- a/fecske/pages/about.html
+++ b/fecske/pages/about.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fecske kamarakórus</title>
+    <title>Fecske kamarakórusról</title>
     <link rel="stylesheet" type="text/css" media="screen" href="/fecske/pages/about.css">
 </head>
 <body>
     <header>
-        <div id="home"><a href="/fecske/index.html">Fecske kamarakórus</a></div>
+        <div id="home"><a href="/fecske/index.html">fecske kamarakórus</a></div>
         <nav>
             <ul>
                 <li><a href="/fecske/pages/about.html">Bemutatkozás</a></li>
                 <li><a href="/fecske/pages/koncert.html">Koncertek</a></li>
                 <li><a href="/fecske/pages/members.html">Kórustagok</a></li>
-                <li><a href="/fecske/pages/repertoar.html">Repertoar</a></li>
+                <li><a href="/fecske/pages/repertoar.html">Repertoár</a></li>
             </ul>
         </nav>
     </header>
@@ -29,59 +29,48 @@
         <div>
             <h1>Fecske</h1>
             <h3>Az ötlettől a megvalósításig</h3>
-            <p>Évek óta érlelődött bennünk egy kamarakórus ötlet, ami a kántorképzős nyarak alatt egyre csak erősödött, míg egyszercsak megalapítottuk a Fecske kamarakórust egy szép őszi napon, <b>2018-ban</b>. Az elején nehézségek adótak a megfelelő próbaterem megtalálásával, aztán az Egyetemi Gyülekezet sietett a segítégünkre, akik 1 évig biztosították nekünk hétről-hétre a templomot, télen pedig a kis termet, ahol melegben is tudtunk próbálni, amit ez úton is köszönünk. </p>
-        </div>
+            <p>Évek óta érlelődött bennünk egy kamarakórus ötlete, ami a kántorképzős nyarak alatt egyre jobban körvonalazódott.  Így lehet, hogy <b>2018-ban</b>, egy szép őszi napon megalapítottuk a <b>Fecske kamarakórust</b>. Az Egyetemi Gyülekezet támogatásával próbáink 1 éven keresztül, hétről-hétre a Lágymányosi Ökumenikus Központ templomában, télen pedig egyik kisebb termében zajlottak – ez úton is köszönjük bizalmukat és támogatásukat, mellyel hozzájárultak indulásunkhoz. 
+            <br>
+            A próbákat rendszerint beénekléssel, hangképzéssel kezdjünk, ami alatt ráhangolódunk a közös éneklésre, valamint bemelegítjük a hangszálunkat. Ezután jöhet a próba oroszlánrésze, amikor megtanuljuk a szólamokat, nagy hangsúlyt fektetve a hangok tisztítására, összecsiszolására, a zenei mű közös megformálására.</p>
     </section>
     <section class="intro">
         <div>
             <h3>2018/2019 az első évünk</h3>
-            <p>Barátok és barátok barátaiból állunk, ami a próbák közvetlenségét(?) alapozza meg, na meg persze az utána való lazításét is. Az első évben a magyar népdalok és azok feldolgozásai fogtak meg, és ebből a bőséges repertoárból válogattunk. Karácsonykor angol carolokat énekeltünk a Rákoscsabai Református Gyülekezetben, ahol Andi szolgál. A következő év nyarán és nyáresti éneklést tartottunk, ami az első önálló koncertünk volt. Az éneklés mellett fuvola, zongora művek szólaltak meg és versek hangzottak el, amit a kórustagok adtak elő. A hangverseny sikerét az is mutatta, hogy a közönség a koncert utáni állófogadáson ott maradt és szívesen beszélgetett velük. Az évad tökéletes lezárása után nyári pihenőt tartottunk, majd  új lendülettel, új helyen kezdtük a következő évadot.</p>
+            <p>Barátok és barátok barátaiból állunk, és ez megalapozza a próbák közvetlenségét és az utána való lazítást. Karácsonykor angol carolokat énekeltünk a Rákoscsabai Református Gyülekezetben, ahol Andi szolgál. Ezt követően a magyar népdalok és azok feldolgozásai voltak terítéken, ebből a bőséges repertoárból válogattunk. 2019 nyarán egy nagyobb lendületű nyáresti éneklést tartottunk, ami egyben az első önálló koncertünk volt. Az énekes produkció mellett fuvolára és zongorára írt művek hangzottak el, és felcsendültek szép magyar versek is. Ezzel a színes, de stílusában egységes műsorral hódoltunk a magyar kultúra nagyjai előtt. A hangverseny sikerét az is mutatta, hogy a közönség a koncert utáni állófogadáson ott maradt és szívesen beszélgetett velünk. Az évad tökéletes lezárása után nyári pihenőt tartottunk, majd új lendülettel, új helyen kezdtük a következő évadot.</p>
         </div>
     </section>
 
     <section class="intro">
         <div>
             <h3>2019/2020 új helyszín, új kezdet</h3>
-            <p>A próbahelyszín Vanda jóvoltából a Közben stúdió lett, amit azóta is az otthonunknak érzünk. Ebben az évadban nyitottuk a könnyűzene felé és több filmzenét is tanultunk. Az adventi időszakban egy flasmobbal dobtuk fel a budapestiek mindennapjait. Az év fordulója meg az egész világ számára átrendezte a heti ritmust. A korona alatt nem tarottunk hónapokig próbát, aztán ahogy lazult a kijárási tilalom, bátorkodtunk összeülni és újra közösen énekelni, ami talán még jobban esett, mint előtte. A próbákat mindig beéneklésse kezdjünk, amialatt a hétköznapokból kiszakadunk és átállunk az éneklésre, bemelegítjk a hangszálunkat és hangképzési technikákat sajátítunk el. Ezután jöhet a próba oroszlánrésze, ahol a szólamokat tanuljuk meg, tisztítjuk, összecsiszoljuk, zeneileg megformáljuk és közösen alkotunk.</p>
+            <p>A próbahelyszín Berecz Vanda jóvoltából a Közben stúdió lett, amit azóta is az otthonunknak érzünk. Az adventi időszakban egy flasmobbal dobtuk fel a budapestiek mindennapjait. Ebben az évadban nyitottuk a könnyűzene felé és több filmzenét is tanultunk.  Azonban 2020 eseményei mindannyiunk számára átrendezte a heti ritmust. Tavasszal az első koronavírus hullám alatt mi is bezártuk kapuinkat, de aztán ahogy lazult a kijárási tilalom, bátorkodtunk összeülni és újra közösen énekelni, ami talán még jobban esett, mint előtte. Folytattuk a könnyű zenei vonalat, és emellett felemlegettük a korábbi évek egyik másik népdalfeldolgozását is. Újabb flashmob során kedvenc francia és angolnyelvű műveinkből énekeltünk egyik basszusunk erkélye alatt, így köszöntve kislányát – a legifjabb fecskét.</p>
         </div>
     </section>
 
     <section class="intro">
         <div>
             <h3>2020/2021 rugalmasság és újragondolás</h3>
-            <p>Fontos számunkra, hogy közösen hozzunk létre valamit, emiatt nyitottak vagyunk az ötletekre és ha tudjuk beépítjük a repertoárunkba. Mivel ez az év a feje tetejére állt a szokásos nyári pihenőben is tarottunk próbákat, hol rövidebbet, hol hosszabbat. Reméljük minél hamarabb visszaáll a rend és tudunk újra hétről hétre szinte teljes létszámmal zenélni. A következő koncertek között szerepel egy karácsonyi fellépés és egy tavaszi kiállításmegnyitó, ahol fiatal magyar zeneszerzők műveit is énekelni fogjuk.</p>
+            <p>Fontos számunkra, hogy közösen hozzunk létre valamit, emiatt nyitottak vagyunk az ötletekre és ha tudjuk beépítjük a repertoárunkba. Ebben a bizonytalan időben próbálunk ismét az éneklés örömére, a közös alkotói folyamatra koncentrálni. Céljaink között természetesen ott szerepel a szokásos adventi fellépés <i>(Thomas Pauschert, Gustaf Nordqvist, Ola Gjeilo, Leonard Cohen…)</i>, a 2021-es év elején pedig a már megkezdett és még ránk váró könnyű és filmzenei művek befejezése és koncertkész formába töltése következik <i>(Feeling good, Skyfall, The blue bird, Vent frais vent du matin., Lineage….)</i>.</p>
         </div>
     </section>
     <section class="intro">
         <div>
             <h3>Tervek</h3>
-            <p>Az elmúlt években a népldalok és filmzenék mellett reneszánsz műveket, romantikus műveket és magyar műveket is énekeltünk, ami közül Csemiczky Miklós alkotásai lopták magukat a szívünkbe. A következő időszakban is szeretnék még több művét énekelni, felfedezni gyöngyszemeket és klasszikus műveket is szeretnék megszólaltatni.</p>
-            <p>Általában háromszólamban éneklünk, mert kevés férfi énekesünk van. Reméljük, férfi hangok, főleg tenorok csatlakoznak a Fecskéhez, de baritonoknak és basszusoknak is nagyon örülünk. Böngéssz a honlapunkon, és ha szimpatikusnak találsz, <b>jelentkezz bátran</b> nálunk bármilyen elérhetőségen! <b>Várunk a kórusunkban! :)</b></p>
+            <p>Az elmúlt években a népdalok és filmzenék mellett reneszánsz műveket, romantikus műveket és magyar műveket is énekeltünk, ami közül Csemiczky Miklós alkotásai lopták magukat a szívünkbe. A következő időszakban is szeretnék még több művét énekelni, felfedezni gyöngyszemeket és klasszikus műveket is szeretnék megszólaltatni. Általában háromszólamban éneklünk, de reméljük, hogy még férfihangok, főleg tenorok, baritonok csatlakoznak a Fecskéhez, és akkor többszólamú művek is terítékre kerülhetnek. </p>
+        </div>
+    </section>
+    <section>
+        <div id="fioka">
+            <h3>Fiókákat keresünk!</h3>
+            <p>Böngéssz a honlapunkon, és ha szimpatikusnak találsz, <b>jelentkezz bátran</b> nálunk bármilyen elérhetőségen!
+            <br>
+            <b>Várunk a kórusunkban!</b> :)</p>
         </div>
     </section>
     
-    <section>
-        <div id="">Ez egy üres hely, ide mit írjunk?</div>
-    </section>
-    <section>
-        <div id="jel">
-            <h1>Szeretnél énekelni, de még nincs helyed?</h1>
-            <p>Gyere el egy próbára, próbálj ki minket. :P Ha kedvet kaptál, jelentkezz bátran!</p>
-            <p>Várunk a kórusunkban!</p>
-        </div>
-    </section>
-</body>
-<footer>
-    <section class="footer">
-        <h1>Próbák</h1>
-        <p>Időpont: csütörtök/péntek 18:00-20:00</p>
-        <p>Helyszín: Közben Stúdió</p>
-    </section>
-    <section class="footer">
-        <h1>Szeretnél énekelni, de még nincs helyed?</h1>
-        <p>Gyere el egy próbára, próbálj ki minket. :P Ha kedvet kaptál, jelentkezz bátran!</p>
-        <p>Várunk a kórusunkban!</p>
-    </section>
-</footer>
+    <footer>
+     Csatlakozz! Kövess! :)
+    </footer>
 
+</body>    
 </html>
