--- a/fecske/pages/koncert.html
+++ b/fecske/pages/koncert.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fecske koncertek</title>
     <link rel="stylesheet" type="text/css" media="screen" href="/fecske/pages/koncert.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div id="home"><a href="/fecske/index.html">Fecske kamarakórus</a></div>
+        <div id="home"><a href="/fecske/index.html">fecske kamarakórus</a></div>
         <nav>
             <ul>
                 <li><a href="/fecske/pages/about.html">Bemutatkozás</a></li>
                 <li><a href="/fecske/pages/koncert.html">Koncertek</a></li>
                 <li><a href="/fecske/pages/members.html">Kórustagok</a></li>
-                <li><a href="/fecske/pages/repertoar.html">Repertoar</a></li>
+                <li><a href="/fecske/pages/repertoar.html">Repertoár</a></li>
             </ul>
         </nav>
     </header>
@@ -22,7 +23,7 @@
         <div class="timeline">
             <div class="container left">
                 <div class="content">
-                    <h2>2018. XII. 10.?</h2>
+                    <h2>2018-12-09</h2>
                     <p class="timeline-txt">Adventi koncert</p>
                     <p class="timeline-txt">carolok</p>
                     <p class="timeline-txt">Rákoscsabai Református Gyülekezet</p>
@@ -30,31 +31,40 @@
             </div>
             <div class="container right">
                 <div class="content">
-                    <h2>2019. VI. 30.</h2>
+                    <h2>2019-06-03</h2>
+                    <p class="timeline-txt">KZMK szakvizsga koncert</p>
+                    <p class="timeline-txt">egyházi művek</p>
+                    <p class="timeline-txt">Szent Anna templom</p>
+                </div>
+            </div>
+
+            <div class="container left">
+                <div class="content">
+                    <h2>2019-06-30</h2>
                     <p class="timeline-txt">Nyáresti koncert</p>
                     <p class="timeline-txt">népdalok</p>
                     <p class="timeline-txt">Egyetemi Gyülekezet</p>
                 </div>
             </div>
-            <div class="container left">
+            <div class="container right">
                 <div class="content">
-                <h2>2019. XII. ??</h2>
+                <h2>2019-12-21</h2>
                 <p class="timeline-txt">Adventi flashmob</p>
                 <p class="timeline-txt">mit énekeltünk?</p>
                 <p class="timeline-txt">Kálvin tér</p>
             </div>
             </div>
-            <div class="container right">
-                <div class="content">
-                    <h2>2020. 09. </h2>
-                    <p class="timeline-txt">Szerenád</p>
-                    <p class="timeline-txt">mit  énekeltünk?</p>
-                    <p class="timeline-txt">Budapest?</p>
-                </div>
-            </div>
             <div class="container left">
                 <div class="content">
-                    <h2>2021. március</h2>
+                    <h2>2020-09-09 </h2>
+                    <p class="timeline-txt">Szerenád a legcsöppebb fiókának</p>
+                    <p class="timeline-txt">válogatás</p>
+                    <p class="timeline-txt">XIII. kerület</p>
+                </div>
+            </div>
+            <div class="container right">
+                <div class="content">
+                    <h2>2021-03</h2>
                     <p class="timeline-txt">Berecz Vanda kiállításmegnyitó</p>
                     <p class="timeline-txt">kortárs</p>
                     <p class="timeline-txt">Közben Stúdió</p>
@@ -65,16 +75,7 @@
     <div id=""></div>
     </section>
     <footer>
-        <section class="footer">
-            <h1>Próbák</h1>
-            <p>Időpont: csütörtök/péntek 18:00-20:00</p>
-            <p>Helyszín: Közben Stúdió</p>
-        </section>
-        <section class="footer">
-            <h1>Szeretnél énekelni, de még nincs helyed?</h1>
-            <p>Gyere el egy próbára, próbálj ki minket. :P Ha kedvet kaptál, jelentkezz bátran!</p>
-            <p>Várunk a kórusunkban!</p>
-        </section>
+        Csatlakozz! Kövess! :)
     </footer>
 </body>
 </html>
