--- a/fecske/pages/repertoar.html
+++ b/fecske/pages/repertoar.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fecske repertoar</title>
+    <title>Fecske repertoár</title>
     <link rel="stylesheet" type="text/css" media="screen" href="/fecske/pages/repertoar.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div id="home"><a href="/fecske/index.html">Fecske kamarakórus</a></div>
+        <div id="home"><a href="/fecske/index.html">fecske kamarakórus</a></div>
         <nav>
             <ul>
                 <li><a href="/fecske/pages/about.html">Bemutatkozás</a></li>
                 <li><a href="/fecske/pages/koncert.html">Koncertek</a></li>
                 <li><a href="/fecske/pages/members.html">Kórustagok</a></li>
-                <li><a href="/fecske/pages/repertoar.html">Repertoar</a></li>
+                <li><a href="/fecske/pages/repertoar.html">Repertoár</a></li>
             </ul>
         </nav>
     </header>
@@ -45,11 +47,6 @@
     </section>
 </body>
 <footer>
-    <h1>Próbák</h1>
-        <p>Időpont: csütörtök/péntek 18:00-20:00</p>
-        <p>Helyszín: Közben Stúdió</p>
-    <h1>Szeretnél énekelni, de még nincs helyed?</h1>
-        <p>Gyere el egy próbára, próbálj ki minket. :P Ha kedvet kaptál, jelentkezz bátran!</p>
-        <p>Várunk a kórusunkban!</p>
+    Csatlakozz! Kövess! :)
 </footer>
 </html>
