--- a/index.html
+++ b/index.html
@@ -40,10 +40,6 @@
                 <dd>szabeszter&#x40;gmail.com</dd>
                 <dt>Adresse</dt>
                 <dd>Waisenhausstr. 46A 80637, München</dd>
-                <dt>Telefon</dt>
-                <dd>+49 175 3417338 </dd>
-                <dt>Nationalität</dt>
-                <dd>ungarisch</dd>
             </dl>
         </div>
     </section>
@@ -51,7 +47,7 @@
         <h1>Über mich</h1>
         <p>Hallo! Ich bin Eszter, 25 Jahre alt, und wohne seit 2019 in München, Nymphenburg. Als ich herzog habe ich mich sofort als Verkäuferin engagiert: zuerst im Taxisgarten was am meisten Spaß gemacht hat, und danach bei Max Rischart's Backhaus wo mich angenehm organisierte Bedingungen erwarteten.
         </p>
-        <p>Währen den letzten paar Monaten habe ich einen online IT Kurs belegt, und nach der englischen endlich auch eine deutsche Sprachprüfung besorgt. Zurzeit bin auf der Suche nach einem Job der mich und mein Talent etwas mehr herausfordert.
+        <p>Während den letzten paar Monaten habe ich einen online IT Kurs belegt, und nach der englischen endlich auch eine deutsche Sprachprüfung besorgt. Zurzeit bin auf der Suche nach einem Job der mich und mein Talent etwas mehr herausfordert.
         </p>
         <h2>
             Was habe ich zu bieten?
