--- a/fecske/pages/members.html
+++ b/fecske/pages/members.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fecske tagok</title>
     <link rel="stylesheet" type="text/css" media="screen" href="/fecske/pages/members.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div id="home"><a href="/fecske/index.html">Fecske kamarakórus</a></div>
+        <div id="home"><a href="/fecske/index.html">fecske kamarakórus</a></div>
         <nav>
             <ul>
                 <li><a href="/fecske/pages/about.html">Bemutatkozás</a></li>
                 <li><a href="/fecske/pages/koncert.html">Koncertek</a></li>
                 <li><a href="/fecske/pages/members.html">Kórustagok</a></li>
-                <li><a href="/fecske/pages/repertoar.html">Repertoar</a></li>
+                <li><a href="/fecske/pages/repertoar.html">Repertoár</a></li>
             </ul>
         </nav>
     </header>
