--- a/fecske/pages/koncert.html
+++ b/fecske/pages/koncert.html
@@ -21,23 +21,33 @@
     </header>
     <section id="timeline">
         <div class="timeline">
+           <!-- legfrisebbkoncert mintaja
+
+               <div class="container right">
+                <div class="content">
+                    <h2>2021-03</h2>
+                    <p class="timeline-txt">Berecz Vanda kiállításmegnyitó</p>
+                    <p class="timeline-txt">kortárs</p>
+                    <p class="timeline-txt">Közben Stúdió</p>
+                </div>
+            </div>
+             --> 
             <div class="container left">
                 <div class="content">
-                    <h2>2018-12-09</h2>
-                    <p class="timeline-txt">Adventi koncert</p>
-                    <p class="timeline-txt">carolok</p>
-                    <p class="timeline-txt">Rákoscsabai Református Gyülekezet</p>
+                    <h2>2020-09-09 </h2>
+                    <p class="timeline-txt">Szerenád a legifjabb fiókának</p>
+                    <p class="timeline-txt">válogatás</p>
+                    <p class="timeline-txt">XIII. kerület</p>
                 </div>
             </div>
             <div class="container right">
                 <div class="content">
-                    <h2>2019-06-03</h2>
-                    <p class="timeline-txt">KZMK szakvizsga koncert</p>
-                    <p class="timeline-txt">egyházi művek</p>
-                    <p class="timeline-txt">Szent Anna templom</p>
+                <h2>2019-12-21</h2>
+                <p class="timeline-txt">Adventi flashmob</p>
+                <p class="timeline-txt">mit énekeltünk?</p>
+                <p class="timeline-txt">Kálvin tér</p>
                 </div>
             </div>
-
             <div class="container left">
                 <div class="content">
                     <h2>2019-06-30</h2>
@@ -48,26 +58,18 @@
             </div>
             <div class="container right">
                 <div class="content">
-                <h2>2019-12-21</h2>
-                <p class="timeline-txt">Adventi flashmob</p>
-                <p class="timeline-txt">mit énekeltünk?</p>
-                <p class="timeline-txt">Kálvin tér</p>
-            </div>
+                    <h2>2019-06-03</h2>
+                    <p class="timeline-txt">KZMK szakvizsga koncert</p>
+                    <p class="timeline-txt">egyházi művek</p>
+                    <p class="timeline-txt">Szent Anna templom</p>
+                </div>
             </div>
             <div class="container left">
                 <div class="content">
-                    <h2>2020-09-09 </h2>
-                    <p class="timeline-txt">Szerenád a legcsöppebb fiókának</p>
-                    <p class="timeline-txt">válogatás</p>
-                    <p class="timeline-txt">XIII. kerület</p>
-                </div>
-            </div>
-            <div class="container right">
-                <div class="content">
-                    <h2>2021-03</h2>
-                    <p class="timeline-txt">Berecz Vanda kiállításmegnyitó</p>
-                    <p class="timeline-txt">kortárs</p>
-                    <p class="timeline-txt">Közben Stúdió</p>
+                    <h2>2018-12-09</h2>
+                    <p class="timeline-txt">Adventi koncert</p>
+                    <p class="timeline-txt">carolok</p>
+                    <p class="timeline-txt">Rákoscsabai Református Gyülekezet</p>
                 </div>
             </div>
         </div> 
