--- a/fecske/pages/members.html
+++ b/fecske/pages/members.html
@@ -19,39 +19,43 @@
             </ul>
         </nav>
     </header>
-    <section id="proba">
-        <div>
-            <h1>Próbák</h1>
-            <p>Időpont: csütörtök/péntek 18:00-20:00</p>
-            <p>Helyszín: Közben Stúdió</p>
-            <p>Ráday utca 31/B - Kapucsengő/Buzz: 164</p>
-        </div>
-    </section>
-    <section id="jel">
-        <div>
-            <h1>Szeretnél énekelni, de még nincs helyed?</h1>
+    <div id="container">
+        <section id="proba">
+            <div>
+                <h2>Próbák</h2>
+                <p>Időpont: csütörtök/péntek 18:00-20:00</p>
+                <p>Helyszín: Közben Stúdió</p>
+                <p>Ráday utca 31/B - Kapucsengő/Buzz: 164</p>
+            </div>
+            <div id="map" >
+                <p>Megközelítés</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5392.871600129317!2d19.053622077160995!3d47.48142301757988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4741ddb19c701063%3A0xe1bcb914979cb3f5!2zS8O2emJlbg!5e0!3m2!1shu!2sde!4v1603464480171!5m2!1shu!2sde" width="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+                </iframe>
+            </div>   
+        </section>
+        <section id="members">
+            <h1>Fiókák</h1>
+            <p>Andi</p>
+            <p>Anna</p>
+            <p>Betti</p>
+            <p>Dóri</p>
+            <p>Emma</p>
+            <p>Eszter</p>
+            <p>Gábor</p>
+            <p>Hajni</p>
+            <p>Juli</p>
+            <p>Sára</p>
+            <p>Szabi</p>
+            <p>Vanda</p>
+        </section>
+        <section id="jel">
+            <h2>Szeretnél énekelni, de még nincs helyed?</h2>
             <p>Gyere el egy próbára, próbálj ki minket. :P Ha kedvet kaptál, jelentkezz bátran!</p>
             <p>Várunk a kórusunkban!</p>
-        </div>
-    </section>
-    <section>
-        <div id="members"></div>
-        <h1>Fiókák</h1>
-        <p>Andi</p>
-        <p>Anna</p>
-        <p>Betti</p>
-        <p>Dóri</p>
-        <p>Emma</p>
-        <p>Eszter</p>
-        <p>Gábor</p>
-        <p>Hajni</p>
-        <p>Juli</p>
-        <p>Sára</p>
-        <p>Szabi</p>
-        <p>Vanda</p>
-    </section>
-
-    <footer id="footer">
+        </section>
+    </div>
+    
+        <footer id="footer">
         <div>
             <p>Kövesss minket! Csatlakozz hozzánk!</p>
         </div>
