--- a/fecske/pages/about.html
+++ b/fecske/pages/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fecske kamarakórusról</title>
     <link rel="stylesheet" type="text/css" media="screen" href="/fecske/pages/about.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <header>
@@ -72,5 +73,22 @@
      Csatlakozz! Kövess! :)
     </footer>
 
+    <script typ="text/javascript">
+        $(document).ready(function () {
+
+            $(".intro").each(function () {
+                if ($(this).height() > 160) {
+                    $(this).addClass('shortened');
+                    $(this).prepend('<div class="readmore"><span>Tovább</span></div>');
+                }
+            });
+
+            $('.readmore').click(function () {
+                $(this).hide();
+                $(this).parent().removeClass('shortened');
+            });
+
+        });
+    </script>
 </body>    
 </html>
